<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/notification"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_daily_key"
            android:summary="@string/setting_daily_summary"
            android:title="@string/setting_daily_title"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_release_key"
            android:title="@string/setting_release_title"
            android:summary="@string/setting_release_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>